2012-04-20  John D. Ramsdell  <ramsdell@mitre.org>

	* interp.c (getaline): Added a space to the prompt.  The space was
	inadvertently deleted when readline support was added.

2012-04-18  John D. Ramsdell  <ramsdell@mitre.org>

	* tc.dl: Added a test case based on the transitive closure.

2012-04-13  John D. Ramsdell  <ramsdell@mitre.org>

	* datalog.texi (Stand-Alone):  Added a chapter on using the
	datalog module in the stand-alone Lua interpreter.

	* datalog.texi (Library):  Added a section on making assertions via
	the C API.

	* even.lua: Added the code that makes up the Stand-Alone chapter.

2012-04-08  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-2.1 with tag v2.1.

	* try.sh, Makefile.am: Changed the extension used for Datalog input
	from .prolog to .dl.

	* interp.c (getaline): Fixed end of line bugs when using
	readline for the case of a line continued with '\' and when
	reading a file with '='.

	* add.lua: Added checks to ensure arguments are numbers.

	* datalog.c (dl_pcall, dl_lua): Removed DATALOG_DEBUG, and now
	always print the error message returned from Lua.  This message is
	very useful now that its so easy to add primitives using the -l
	option.

2012-04-07  John D. Ramsdell  <ramsdell@mitre.org>

	* git: Tagged as datalog-2.0 with tag v2.0.

	* configure.ac:  Enabled the use of the one C99 feature used in
	the program.  When compiled with a C99 compiler, pushstring in
	loader.c uses a variable length array instead of a malloc.

	* interp.c (getaline): Added support for GNU readline in the
	interpreter when it is available.

2012-04-06  John D. Ramsdell  <ramsdell@mitre.org>

	* loader.c (addstr): Fixed two bugs associated with the end of a
	string.  Fixed the case in which the last character in a buffer is
	double quote and the previous character is part of a numerical
	escape.  Also fixed the case in which a pushed buffer was followed
	by a buffer read giving a double quote, but the state s1 was not
	SEEN_NOTHING.
